[gd_scene load_steps=8 format=3 uid="uid://dtmvo40mj8fi7"]

[ext_resource type="Script" path="res://Escenas/player.gd" id="1_dsexy"]
[ext_resource type="Texture2D" uid="uid://cfqhrnpsc5n83" path="res://Sprites/jugador.png" id="2_lfyx6"]
[ext_resource type="AudioStream" uid="uid://q0cxu7txdtc8" path="res://sfx/shoot.wav" id="3_kvpxs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r0ln6"]
size = Vector2(16, 8.25532)

[sub_resource type="Animation" id="Animation_l2lr2"]
resource_name = "Disparado"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"eliminar"
}]
}

[sub_resource type="Animation" id="Animation_qaqgj"]
resource_name = "Vivo"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4akg3"]
_data = {
"Disparado": SubResource("Animation_l2lr2"),
"Vivo": SubResource("Animation_qaqgj")
}

[node name="Player" type="CharacterBody2D" groups=["Nave"]]
position = Vector2(110, 230)
script = ExtResource("1_dsexy")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_lfyx6")
hframes = 2
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.855)
scale = Vector2(0.94, 0.755)
shape = SubResource("RectangleShape2D_r0ln6")

[node name="PuntoAparicionLaser" type="Marker2D" parent="."]
position = Vector2(0, -3.385)

[node name="TimerDisparo" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4akg3")
}
autoplay = "Vivo"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_kvpxs")
volume_db = -7.42

[connection signal="timeout" from="TimerDisparo" to="." method="_on_timer_disparo_timeout"]
